// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should Checkbox render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      Array [
        Object {},
      ],
    ]
  }
  testID="Box"
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1D5AF5",
        "borderColor": "#58627F",
        "borderRadius": 4,
        "borderWidth": 0,
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      }
    }
    testID="checkbox"
  >
    <Icon
      color="#fff"
      name="check"
      size={16}
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#1A233D",
          "display": "flex",
          "fontFamily": "\\"Public Sans\\", sans-serif",
          "fontWeight": "400",
          "marginLeft": 8,
        },
        Array [
          Object {
            "fontSize": 14,
          },
        ],
      ]
    }
    testID="checkbox-label"
  >
    Label da checkbox
  </Text>
</View>
`;

exports[`should Checkbox render required feedback 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
      },
      Array [
        Object {},
      ],
    ]
  }
  testID="Box"
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1D5AF5",
        "borderColor": "#D63429",
        "borderRadius": 4,
        "borderWidth": 0,
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      }
    }
    testID="checkbox"
  >
    <Icon
      color="#fff"
      name="check"
      size={16}
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#1A233D",
          "display": "flex",
          "fontFamily": "\\"Public Sans\\", sans-serif",
          "fontWeight": "400",
          "marginLeft": 8,
        },
        Array [
          Object {
            "fontSize": 14,
          },
        ],
      ]
    }
    testID="checkbox-label"
  >
    Label da checkbox
  </Text>
</View>
`;
